--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,13 +7,34 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Title="TiendaRopaApp">
+    Title="Tienda Ropa">
 
+    <!-- MicaBackdrop como fondo -->
     <Window.SystemBackdrop>
         <MicaBackdrop />
     </Window.SystemBackdrop>
 
     <Grid>
+        <!-- NavigationView engloba panel lateral y área de contenido -->
+        <NavigationView 
+            x:Name="NavView" 
+            PaneDisplayMode="Left" 
+            IsBackButtonVisible="Collapsed" 
+            IsSettingsVisible="False"
+            OpenPaneLength="200"
+            Loaded="NavView_Loaded"
+            SelectionChanged="NavView_SelectionChanged">
 
+            <!-- Ítems del menú principal -->
+            <NavigationView.MenuItems>
+                <NavigationViewItem Content="Inicio" Icon="Home" Tag="TiendaRopaApp.Views.InicioPage"/>
+                <NavigationViewItem Content="Productos" Icon="Shop" Tag="TiendaRopaApp.Views.ProductosPage"/>
+                <NavigationViewItem Content="Ventas" Icon="Home" Tag="TiendaRopaApp.Views.VentasPage"/>
+                <NavigationViewItem Content="Dashboard" Icon="ReportHacked" Tag="TiendaRopaApp.Views.DashboardPage"/>
+            </NavigationView.MenuItems>
+
+            <!-- Aquí cargaremos las páginas -->
+            <Frame x:Name="ContentFrame"/>
+        </NavigationView>
     </Grid>
 </Window>
